--- a/index.html
+++ b/index.html
@@ -7,33 +7,215 @@
     <title>Biblioteca</title>
 </head>
 <body>
+    <div class="header">
+        <div class="logo"><a href = "#"><img src="img/logo.svg" alt="logo da empresa"></a></div>
+        <div class="contato">
+            <p>
+                <strong>Entre em contato:</strong> (69) 99278-9999 | Email: autopecas@gmail.com
+            </p>
+        </div>
+        <div class="acoes">
+            <button>
+                <img src="img/icon-login.png" alt="login"> Login
+            </button>
+            <button>
+                <img src="img/icon-cadastrar.png" alt="cadastrar"> Cadastrar
+            </button>
+            <button id="cart_button">
+                🛒 (<span id="numero_carrinho">0</span>)
+            </button>
+        </div>
+    </div>
     <div class = "main">
         <div class = "conteudo">
+            <aside class = "sidebar">
+                <nav>
+                    <h3>Destaques</h3>
+                    <ul>
+                        <li>
+                            <a href="#">Mais Vendidos</a>
+                        </li>
+                        <li>
+                            <a href="#">Novidades</a>
+                        </li>
+                        <li>
+                            <a href="#">Produtos em Alta</a>
+                        </li>
+                    </ul>
+                    <h3>Comprar por Categoria</h3>
+                    <ul>
+                        <li>
+                            <a href="#">Capacetes</a>
+                        </li>
+                        <li>
+                            <a href="#">Camisetas</a>
+                        </li>
+                        <li>
+                            <a href="#">Embreagem</a>
+                        </li>
+                        <li>
+                            <a href="#">Pastilha de Freio</a>
+                        </li>
+                        <li>
+                            <a href="#">Molas</a>
+                        </li>
+                        <li>
+                            <a href="#">Aro Rodas</a>
+                        </li>
+                        <li>
+                            <a href="#">Pneus</a>
+                        </li>
+                        <li>
+                            <a href="#">Óleos</a>
+                        </li>
+                        <li>
+                            <a href="#">Correias</a>
+                        </li>
+                        <li>
+                            <a href="#">Velas</a>
+                        </li>
+                    </ul>
+                </nav>
+            </aside>
             <div class = "produtos_container">
                 <div class = "produtos">
                     <a href = "#">
-                        <img src = "img/Verity.jpg" alt="livro de romance" />
+                        <img src = "img/produtos/Capacete_HFS_2.webp" alt="Capacete HFS 2 - 2025 Preto / Amarelo" />
                     </a>
-                    <h3>Verity</h3>
+                    <h3>Capacete HFS 2 - 2025 Preto / Amarelo</h3>
                     <hr>
                     <p class = "avaliacao">★★★★★</p>
                     <hr>
-                    <p class = "preco"> <span class = "desconto"> R$ 59,90 </span> R$ 32,87</p>
+                    <p class = "preco"> R$ 346,07</p>
                     <button> Adicionar ao Carrinho</button>
                 </div>
                 <div class = "produtos">
                     <a href = "#">
-                        <img src = "img/Use_a_Cabeca_c.jpg" alt="livro de programação" />
+                        <img src = "img/produtos/CAMISETA_HONDA_OFF_ROAD.webp" alt="CAMISETA HONDA OFF-ROAD MANGA LONGA CINZA VERMELHO PRETO" />
                     </a>
-                    <h3>Use a Cabeça c#</h3>
+                    <h3>CAMISETA HONDA OFF-ROAD</h3>
                     <hr>
                     <p class = "avaliacao">★★★★☆</p>
                     <hr>
-                    <p class = "preco"> R$ 115,85</p>
+                    <p class = "preco"> <span class = "desconto"> R$ 146,02 </span> R$ 116,82</p>
+                    <button> Adicionar ao Carrinho</button>
+                </div>
+                <div class = "produtos">
+                    <a href = "#">
+                        <img src = "img/produtos/Kit_Embreagem-Hamp_CG_125_CG.webp" alt="Kit Embreagem Hamp CG 125 CG 150 BROS 150 Original" />
+                    </a>
+                    <h3>Kit Embreagem Hamp CG 125 CG 150</h3>
+                    <hr>
+                    <p class = "avaliacao">★★★★★</p>
+                    <hr>
+                    <p class = "preco"> R$ 204,49</p>
+                    <button> Adicionar ao Carrinho</button>
+                </div>
+                <div class = "produtos">
+                    <a href = "#">
+                        <img src = "img/produtos/Pastilha_de_Freio_Dianteira_HAMP_TITAN_FAN.webp" alt="Pastilha de Freio Dianteira HAMP - TITAN/FAN 150 e 160 (2009 a 2017)" />
+                    </a>
+                    <h3>Pastilha de Freio Dianteira - TITAN/FAN</h3>
+                    <hr>
+                    <p class = "avaliacao">★★★★★</p>
+                    <hr>
+                    <p class = "preco"> R$ 57,98</p>
+                    <button> Adicionar ao Carrinho</button>
+                </div>
+                <div class = "produtos">
+                    <a href = "#">
+                        <img src = "img/produtos/Mola_Embreagem_Original_Honda_22401KVSJ01.webp" alt="Mola Embreagem Original Honda 22401KVSJ01" />
+                    </a>
+                    <h3>Mola Embreagem Original Honda</h3>
+                    <hr>
+                    <p class = "avaliacao">★★★★☆</p>
+                    <hr>
+                    <p class = "preco"> <span class = "desconto"> R$ 21,01 </span> R$ 18,91</p>
+                    <button> Adicionar ao Carrinho</button>
+                </div>
+                <div class = "produtos">
+                    <a href = "#">
+                        <img src = "img/produtos/Aro_Roda_Traseira_Nxr_Bros_125_150_160.webp" alt="Aro Roda Traseira Nxr Bros 125/150/160 Freio A Lona Hamp" />
+                    </a>
+                    <h3>Aro Roda Traseira Nxr Bros 125/150/160</h3>
+                    <hr>
+                    <p class = "avaliacao">★★★★★</p>
+                    <hr>
+                    <p class = "preco"> R$ 184,24</p>
+                    <button> Adicionar ao Carrinho</button>
+                </div>
+                    <div class = "produtos">
+                    <a href = "#">
+                        <img src = "img/produtos/pneu_traseiro_pirelli_super_city_9090_18_51p.webp" alt="Pneu Traseiro Pirelli Super City 90/90-18 51P Sem Câmara" />
+                    </a>
+                    <h3>Pneu Traseiro Pirelli Super City 90/90-18</h3>
+                    <hr>
+                    <p class = "avaliacao">★★★★★</p>
+                    <hr>
+                    <p class = "preco"> <span class = "desconto"> R$ 360,28 </span> R$ 324,25</p>
+                    <button> Adicionar ao Carrinho</button>
+                </div>
+                <div class = "produtos">
+                    <a href = "#">
+                        <img src = "img/produtos/kit_troca_de_oleo_cg_160_bros_160_biz_125_biz_110_pop_110i.webp" alt="Kit Troca de Óleo Cg 160 Bros 160 Biz 125 Biz 110 Pop 110i Original Honda" />
+                    </a>
+                    <h3>Kit Troca de Óleo Cg 160 Bros 160 Biz 125 Biz 110</h3>
+                    <hr>
+                    <p class = "avaliacao">★★★★★</p>
+                    <hr>
+                    <p class = "preco"> R$ 66,40</p>
+                    <button> Adicionar ao Carrinho</button>
+                </div>
+                <div class = "produtos">
+                    <a href = "#">
+                        <img src = "img/produtos/correia_transmissao_pcx_150_2019_2020_2021_2022_original_honda.webp" alt="Correia Transmissão Pcx 150 2019 2020 2021 2022 Original Honda 23100K97T01" />
+                    </a>
+                    <h3>Correia Transmissão Pcx Original Honda</h3>
+                    <hr>
+                    <p class = "avaliacao">★★★★☆</p>
+                    <hr>
+                    <p class = "preco"> R$ 217,73</p>
+                    <button> Adicionar ao Carrinho</button>
+                </div>
+                <div class = "produtos">
+                    <a href = "#">
+                        <img src = "img/produtos/vela_de_ignicao_biz_125_original_honda.webp" alt="Vela de Ignição Biz 125 Original Honda 31916KPH901" />
+                    </a>
+                    <h3>Vela de Ignição Biz 125 Original Honda</h3>
+                    <hr>
+                    <p class = "avaliacao">★★★★☆</p>
+                    <hr>
+                    <p class = "preco"> R$ 58,09</p>
+                    <button> Adicionar ao Carrinho</button>
+                </div>
+                <div class = "produtos">
+                    <a href = "#">
+                        <img src = "img/produtos/capacete_honda_sahara_300_rally_vermelho.webp" alt="Capacete Honda Sahara 300 Rally Vermelho" />
+                    </a>
+                    <h3>Capacete Honda Sahara 300 Rally</h3>
+                    <hr>
+                    <p class = "avaliacao">★★★★★</p>
+                    <hr>
+                    <p class = "preco"> <span class = "desconto"> R$ 1.016,69 </span> R$ 813,35</p>
+                    <button> Adicionar ao Carrinho</button>
+                </div>
+                <div class = "produtos">
+                    <a href = "#">
+                        <img src = "img/produtos/pneu_90_90_21m_ctl_54v_tourance_next.webp" alt="PNEU 90/90-21M/CTL 54V TOURANCE NEXT" />
+                    </a>
+                    <h3>PNEU 90/90-21M/CTL 54V TOURANCE NEXT</h3>
+                    <hr>
+                    <p class = "avaliacao">★★★★★</p>
+                    <hr>
+                    <p class = "preco"> R$ 1.045,48</p>
                     <button> Adicionar ao Carrinho</button>
                 </div>
             </div>
         </div>
     </div>
+    <footer>
+        <p>&copy;2025 Auto Peças. Todos os direitos reservados!</p>
+    </footer>
+    <script src="js/script.js"></script>
 </body>
 </html>
